--- a/css/navbar.css
+++ b/css/navbar.css
@@ -2,14 +2,12 @@
 
 /*  ---------------------- From style.css -----------------------  */
 .mainmenu-area {
-  background: none repeat scroll 0 0 #fbfbfbbe;
+  background: none repeat scroll 0 0 #fbfbfb;
   font-family: "Roboto Condensed", sans-serif;
   text-transform: uppercase;
   width: 100%;
   z-index: 999;
-  overflow: hidden;
 }
-
 
 .mainmenu-area ul.navbar-nav li.nav-item a.nav-link {
   color: #6e6a6a;
@@ -62,6 +60,7 @@
 @media only screen and (max-width: 975px) {
   .navbar .show form.form-inline {
     width: 100%;
+    margin-top: 8px;
   }
 }
 
