--- a/css/navbar.css
+++ b/css/navbar.css
@@ -23,9 +23,14 @@
   color: #FFF;
 }
 
+
+/*-----------------------------------Huan Change-----------------------------------------
 .mainmenu-area ul.navbar-nav li.nav-item a.nav-link:focus {
   color: #FFF;
 }
+-------------------------------------Huan Change---------------------------------------*/
+
+
 
 /*  -------------------------------------------------------------  */
 
