Finished Cart and Checkout Features
Finished Cart and Checkout Features

--- a/style.css
+++ b/style.css
@@ -1124,9 +1124,8 @@ td.actions div.coupon {
 }
 
 .cart_totals {
-  float: right;
-  margin-bottom: 50px;
-  width: 40%;
+  margin: 0 auto;
+  width: 100%;
 }
 
 .cart-collaterals h2 {
