--- a/style.css
+++ b/style.css
@@ -960,7 +960,8 @@ button[type='submit']:hover,
   border: medium none;
   color: #fff;
   padding: 6px 25px;
-  display: inline-block;
+  display: inline-block;width: 100%;
+  text-align: center;
 }
 
 .add_to_cart_button:hover {
@@ -1339,8 +1340,4 @@ div.cart-collaterals ul.products li.product:hover .add_to_cart_button {
 
 .product-option-shop {
   margin-top: 15px;
-}
-
-.single-shop-product {
-  margin-bottom: 50px;
 }
