--- a/css/shoppingcart.css
+++ b/css/shoppingcart.css
@@ -3,20 +3,22 @@
     float: right;
     font-size: 18px;
     margin-top: 40px;
-    padding: 10px;
+    /* padding: 10px; */
     position: relative;
-  }
+}
   
-  .shopping-item a {
+.shopping-item a {
     color: #666;
-  }
-  
-  .cart-amunt {
+    display: block;
+    padding: 10px;
+}
+
+.cart-amunt {
     color: #5a88ca;
     font-weight: 700;
-  }
-  
-  .product-count {
+}
+
+.product-count {
     background: none repeat scroll 0 0 #5a88ca;
     border-radius: 50%;
     color: #fff;
@@ -29,25 +31,25 @@
     text-align: center;
     top: -10px;
     width: 20px;
-  }
-  
-  .shopping-item:hover {
+}
+
+.shopping-item:hover {
     background: none repeat scroll 0 0 #5a88ca;
     border-color: #000;
-  }
-  
-  .shopping-item:hover a {
+}
+
+.shopping-item:hover a {
     color: #fff;
     text-decoration: none;
-  }
-  
-  .shopping-item:hover .cart-amunt {
+}
+
+.shopping-item:hover .cart-amunt {
     color: #fff;
-  }
-  
-  .shopping-item:hover .product-count {
+}
+
+.shopping-item:hover .product-count {
     background: none repeat scroll 0 0 #000;
-  }
+}
 
 /* ===================================================================================== */
 
@@ -66,8 +68,8 @@
 }
 
 .shopping-cart.shopping-item a {
-    display: block;
     padding: 4px;
+    height: 100%;
 }
 
 .shopping-cart.shopping-item i {
@@ -97,6 +99,7 @@
     height: 55px;
     width: 55px;
     border: 1pt #8080ff solid;
+    z-index: -1;
 }
 
 .shopping-cart.shopping-item .product-count {
