--- a/style.css
+++ b/style.css
@@ -1066,7 +1066,7 @@ table.shop_table th,
 table.shop_table td {
   border-left: 1px solid #ddd;
   border-top: 1px solid #ddd;
-  padding: 15px;
+  padding: 15px 0px;
   text-align: center;
 }
 
