Auto stash before merge of "develop" and "origin/develop"

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,6 @@
-@import "css/shoppingcart.css";
+@import "shoppingcart.css";
+@import "header.css";
+@import "navbar.css";
 
 @font-face {
   font-family: Raleway;
